--- a/webapp/app/views/layouts/main.slim
+++ b/webapp/app/views/layouts/main.slim
@@ -13,7 +13,7 @@ html lang="en" xmlns="http://www.w3.org/1999/xhtml"
     link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'
     link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'
     /*meta name='viewport' content='width=device-width,initial-scale=1'*/
-    title = @title.present? ? "#{@title} | PBS Tool" : "PBS Tool"
+    title = @title.present? ? "#{@title} | PBS Finder" : "PBS Finder"
 
     / STATIC ASSETS
     = favicon_tag 'favicon.ico'
