--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -82,9 +82,7 @@
         opacity: 0.6;
         border-right: solid 1px #dddddd;
         padding: 0; }
-        .table-container .table td.cluster .popup-div {
-          width: 60px;
-          height: 50px;
+        .table-container .table td.cluster.cluster-popover-1, .table-container .table td.cluster.cluster-popover-2, .table-container .table td.cluster.cluster-popover-3, .table-container .table td.cluster.cluster-popover-4 {
           cursor: pointer; }
         .table-container .table td.cluster.cluster-1 {
           background-color: #36a8e5; }
