--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -73,6 +73,7 @@
       }
       &.no-bind, &.no-bind.striped {
         height:50px;
+        min-width:330px;
         background-image:url('../../images/stripe.png');
         background-repeat:repeat;
         border: solid 1px #dddddd;
