--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -53,6 +53,7 @@
         height: 50px; }
       .table-container .table td.no-bind, .table-container .table td.no-bind.striped {
         height: 50px;
+        min-width: 330px;
         background-image: url("../../images/stripe.png");
         background-repeat: repeat;
         border: solid 1px #dddddd;
