--- a/webapp/app/views/base/index.slim
+++ b/webapp/app/views/base/index.slim
@@ -15,6 +15,7 @@ div class="description"
   = partial 'layouts/notice', locals: { \
     type: 'info', \
     notice: { \
+      t('base.description.title0') => t('base.description.description0') + " <span><a href=\"#{ url_for(:jobs, :job, settings.main_conf['demo']) }\">#{ t('base.description.description0_add') }</a></span>", \
       t('base.description.title1') => t('base.description.description1'), \
       t('base.description.title2') => t('base.description.description2'), \
       t('base.description.title3') => t('base.description.description3'), \
