--- a/webapp/app/stylesheets/irap/list.scss
+++ b/webapp/app/stylesheets/irap/list.scss
@@ -16,10 +16,13 @@
   }
 }
 #list tr {
-  td:nth-child(3) {
+  td:nth-child(2) {
     min-width:160px;
   }
-  td:nth-child(2) {
+  td:nth-child(3) {
+    min-width:150px;
+  }
+  td:nth-child(4) {
     min-width:150px;
   }
 }
