--- a/webapp/app/views/irap/_form_new_files.slim
+++ b/webapp/app/views/irap/_form_new_files.slim
@@ -3,7 +3,7 @@
 fieldset class='control-group#{error ? ' has-error' : ''}'
   = f.label 'Experiment path', :class => 'control-label'
   div class='controls'
-    = f.text_field :path, :class => 'form-control input-large input-with-feedback'
+    = f.text_field :path, :class => 'form-control input-large input-with-feedback', :autofocus => true
     span class='help-inline' = error ? f.error_message_on(:path, :class => 'text-error') : t('irap.example.path')
 
 /* Reference */
