--- a/webapp/app/views/irap/_form_new_toolset.slim
+++ b/webapp/app/views/irap/_form_new_toolset.slim
@@ -5,7 +5,7 @@ fieldset class='control-group#{error ? ' has-error' : ''}'
   div class='controls'
     - keys = ['Default', 'TopHat 1', 'TopHat 2', 'SMALT', 'GSNAP', 'SOAPsplice', 'BWA 1', 'BWA 2', 'Bowtie 1', 'Bowtie 2', 'GEM', 'STAR', 'OSA']
     - values = ['', 'tophat1', 'tophat2', 'smalt', 'gsnap', 'soapsplice', 'bwa1', 'bwa2', 'bowtie1', 'bowtie2', 'gem', 'star', 'osa']
-    = f.select :mapper, :class => 'form-control', :options => Hash[keys.zip(values)]
+    = f.select :mapper, :class => 'form-control', :options => Hash[keys.zip(values)], :autofocus => true
     span class='help-inline' = error ? f.error_message_on(:mapper, :class => 'text-error') : t('irap.example.mapper')
 
 /* Mapper override */
